fix: add overflow hidde for windows user

--- a/src/app/components/container/container.component.scss
+++ b/src/app/components/container/container.component.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   min-height: 100vh;
   background-color: $color-light;
+  overflow-x: hidden;
 }
 
 .wrapper {
